# arch-compiler

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-AGENTS.md  README-HUMAN.md  README.md  pyproject.toml
.codex/: INSTALL.md
config/: __init__.py  defaults.yaml
docs/: COMPILER-CONFLICT-RESOLUTION.md  arch-platform-pattern-relationship.md  test-inventory.md  tools.md
patterns/: __init__.py  api-graphql-schema-first.json  api-rest-resource-oriented.json  api-versioning-header.json  api-versioning-url.json  arch-cold-archive-tiering.json  arch-egress-minimization.json  arch-microservices.json  arch-modular-monolith.json  arch-monolith.json  arch-multi-tenant-consolidation.json  arch-serverless--aws.json  arch-serverless--azure.json  arch-serverless--gcp.json  arch-serverless-pay-per-use--aws-lambda.json  arch-serverless-pay-per-use--azure-functions.json  arch-serverless-pay-per-use--gcp-cloud-functions.json  arch-serverless-pay-per-use.json  arch-serverless.json  arch-spot-preemptible-batch.json  async-event-driven--aws.json  async-event-driven--azure.json  async-event-driven--gcp.json  async-event-driven.json  async-fire-and-forget.json  async-messaging-delivery-guarantee-required.json  batch-platform-feature-required.json  batch-processing-required.json  build-hermetic-builds.json  cache-aside--redis.json  cache-aside.json  caching-required-high-read-throughput.json  caching-required-high-write-throughput.json  caching-required-low-latency.json  code-di-pure.json  compliance-ccpa.json  compliance-gdpr-basic.json  compliance-gdpr-right-to-be-forgotten.json  compliance-hipaa.json  compliance-sox.json  (+149 more)
reports/: asymmetric-conflicts-audit.json  (+1 more)
(+196 files in other folders)
